--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1"
+  },
+  "devDependencies": {
+    "grunt-apidoc": "^0.11.0"
   }
 }
